--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "dice-helper-app",
   "version": "1.0.0",
   "description": "Dice Helper App ~~~~~~~~~~~~~~~",
-  "main": "index.html",
+  "main": "node-http-server.js",
+  "scripts": {
+	"start": "node .",
+	"build": "echo build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jamesread/dice-helper-app.git"
@@ -12,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/jamesread/dice-helper-app/issues"
   },
-  "homepage": "https://github.com/jamesread/dice-helper-app#readme"
+  "homepage": "https://github.com/jamesread/dice-helper-app#readme",
+  "dependencies": {
+    "connect": "^3.7.0",
+    "serve-static": "^1.14.1"
+  }
 }
